# lazyjira

./: CHANGELOG.md  Cargo.toml
src/: app.rs  main.rs  tasks.rs
src/api/: client.rs  types.rs
src/config/: settings.rs
src/ui/components/: comments.rs  mention_picker.rs  mod.rs  saved_filters.rs  text_editor.rs
src/ui/views/: detail.rs  filter.rs
