[package]
name = "lazyjira"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "A terminal-based user interface for JIRA"
authors = ["LazyJira Contributors"]
license = "MIT"
repository = "https://github.com/jonbito/lazyjira"
homepage = "https://github.com/jonbito/lazyjira"
keywords = ["jira", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
terminput = "0.2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
dirs = "5.0"
keyring = "2.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"
urlencoding = "2.1"
walkdir = "2.5"
open = "5.3"
pulldown-cmark = { version = "0.12", default-features = false }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
serial_test = "3.2"

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# A GitHub repo to push Homebrew formulas to
tap = "jonbito/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Allow custom modifications to CI workflow (ssh-key for homebrew tap)
allow-dirty = ["ci"]
